# r30rg

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
crates/r30rg-cli/: Cargo.toml
crates/r30rg-cli/src/: main.rs
crates/r30rg-core/: Cargo.toml
crates/r30rg-core/src/: chaos.rs  invariant.rs  lib.rs  prng.rs  scenario.rs  time.rs  types.rs
crates/r30rg-live/: Cargo.toml
crates/r30rg-live/src/: docker.rs  lib.rs  rpc.rs
crates/r30rg-scenarios/: Cargo.toml
crates/r30rg-scenarios/src/: batch_poster_chaos.rs  bridge_adversarial.rs  bridge_stress.rs  invariant_probe.rs  lib.rs  retryable_probe.rs  sequencer_chaos.rs  timeboost_adversarial.rs  validator_chaos.rs
crates/r30rg-sim/: Cargo.toml
crates/r30rg-sim/src/: lib.rs  network.rs  simulator.rs
