[package]
name = "r30rg-core"
description = "Core types, traits, and deterministic primitives for r30rg chaos framework"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alloy-primitives = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
