[package]
name = "r30rg-live"
description = "Live chaos engine — Docker fault injection + RPC adversarial harness"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
r30rg-core = { workspace = true }
alloy = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-network = { workspace = true }
bollard = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
