[package]
name = "r30rg-sim"
description = "Deterministic simulation engine — TigerBeetle-style time-compressed chaos"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
r30rg-core = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
